# Python_Home_Assistant_YAML_Generator

./: logging_config.json  pyproject.toml  readme.md
home_assistant_yml_generator/: __init__.py  main.py
home_assistant_yml_generator/sensor/: yaml_generator.py
templates/: Bosch_BTH-RA.jinja  Heiman_HS1SA-E.jinja  TuYa_HZ-SL01.jinja  TuYa_TS011F.jinja  TuYa_TS0201.jinja  TuYa_TS0203.jinja  TuYa_WSD500A.jinja  TuYa_ZP01.jinja  TuYa_ZTH01.jinja
templates/attribute/: availability.jinja  device.jinja  device_ref.jinja
templates/sensor/: battery_percent.jinja  battery_state.jinja  contact.jinja  humidity.jinja  occupancy.jinja  outletplug_current.jinja  outletplug_energy.jinja  outletplug_power.jinja  outletplug_state.jinja  outletplug_voltage.jinja  smoke.jinja  soil_moisture.jinja  temperature.jinja  thermos_boost_heating.jinja  thermos_climate.jinja  thermos_pi_heating_demand.jinja  thermos_window_detection.jinja
